Atualiza application.properties com dados corretos do DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=ecommerce
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+spring.datasource.url=jdbc:postgresql://hopper.proxy.rlwy.net:31354/railway
 spring.datasource.username=postgres
-spring.datasource.password=140208
+spring.datasource.password=UTvGmObEkJIdknmVCjJxKQOJMEljUvPy
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
