--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=ecommerce
 
-spring.datasource.url=jdbc:postgresql://hopper.proxy.rlwy.net:31354/railway
-spring.datasource.username=postgres
-spring.datasource.password=UTvGmObEkJIdknmVCjJxKQOJMEljUvPy
+spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
